# s3-folder-sync

./: .gitignore  README.md  plan.md  pyproject.toml
src/s3_folder_sync/: __init__.py  bunny_client.py  cli.py  config.py  daemon.py  ignore.py  menubar.py  s3client.py  state.py  storage.py  sync_engine.py  watcher.py
tests/: conftest.py  test_cli.py  test_config.py  test_ignore.py  test_s3client.py  test_state.py  test_sync_engine.py  test_watcher.py
