[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "s3-folder-sync"
version = "0.1.0"
description = "Sync a local folder to S3-compatible object storage across machines"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
    "watchdog>=4.0",
    "click>=8.1",
    "toml>=0.10",
]

[project.scripts]
s3-folder-sync = "s3_folder_sync.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "moto[s3]>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
